--- a/tmux.conf
+++ b/tmux.conf
@@ -3,12 +3,15 @@ set -g default-terminal "screen-256color"
 set-option -g default-command "reattach-to-user-namespace -l zsh"
 setw -g utf8 on
 set -g status-utf8 on
+# change prefix key
+unbind-key C-b
+set-option -g prefix C-a
+bind-key C-t send-prefix
 
 set -g status-interval 10
 set -g status-bg white
 setw -g window-status-current-fg white
 setw -g window-status-current-bg black
-
 #pane-active-border
 set -g pane-active-border-fg white
 # KeyBindings
@@ -34,6 +37,9 @@ bind l select-pane -R
 set -g mode-mouse on
 set -g mouse-resize-pane on
 set -g mouse-select-pane on
+#set -g mode-mouse on
+#set-option -g mouse-resize-pane on
+#set-option -g mouse-select-pane on
 
 set-window-option -g mode-keys vi
 
