--- a/tmux.conf
+++ b/tmux.conf
@@ -4,9 +4,8 @@ set-option -g default-command "reattach-to-user-namespace -l zsh"
 setw -g utf8 on
 set -g status-utf8 on
 # change prefix key
-unbind-key C-b
-set-option -g prefix C-a
-bind-key C-t send-prefix
+unbind C-b
+set-option -g prefix C-q
 
 set -g status-interval 10
 set -g status-bg white
