--- a/tmux.conf
+++ b/tmux.conf
@@ -16,11 +16,8 @@ set -g pane-active-border-fg white
 # KeyBindings
 # pane
 unbind 1
-#bind 1 break-pane
-#bind 2 split-window -v
-#bind 3 split-window -h
-bind v split-window -v
-bind s split-window -h
+bind v split-window -v -c "#{pane_current_path}"
+bind s split-window -h -c "#{pane_current_path}"
 bind C-k kill-pane
 bind K kill-window
 unbind &
