--- a/tmux.conf
+++ b/tmux.conf
@@ -1,6 +1,5 @@
 set -s escape-time 1
 set -g default-terminal "screen-256color" 
-set-option -g default-command "reattach-to-user-namespace -l zsh"
 setw -g utf8 on
 set -g status-utf8 on
 # change prefix key
@@ -16,8 +15,8 @@ set -g pane-active-border-fg white
 # KeyBindings
 # pane
 unbind 1
-bind v split-window -v -c "#{pane_current_path}"
-bind s split-window -h -c "#{pane_current_path}"
+bind-key s split-window -h -c "#{pane_current_path}"
+bind-key v split-window -v -c "#{pane_current_path}"
 bind C-k kill-pane
 bind K kill-window
 unbind &
@@ -30,12 +29,13 @@ bind j select-pane -D
 bind k select-pane -U
 bind l select-pane -R
 
-set -g mode-mouse on
-set -g mouse-resize-pane on
-set -g mouse-select-pane on
-#set -g mode-mouse on
-#set-option -g mouse-resize-pane on
-#set-option -g mouse-select-pane on
+#setw -g mode-mouse on
+##set -g mouse-resize-pane on
+##set -g mouse-select-pane on
+##set -g mouse-select-window on
+
+setw -g mouse on
+bind -n WheelUpPane   select-pane -t= \; copy-mode -e \; send-keys -M
 
 set-window-option -g mode-keys vi
 
@@ -45,3 +45,4 @@ set-window-option -g mode-keys vi
 
 unbind r
 #bind C-r source-file ~/.tmux.conf #; display-message "reloaded"
+#set-option -g default-command "reattach-to-user-namespace -l zsh"
