--- a/tmux.conf
+++ b/tmux.conf
@@ -35,12 +35,14 @@ bind l select-pane -R
 ##set -g mouse-select-window on
 
 setw -g mouse on
+
 bind -n WheelUpPane   select-pane -t= \; copy-mode -e \; send-keys -M
+bind -n WheelDownPane select-pane -t= \;                 send-keys -M
 
 set-window-option -g mode-keys vi
 
 #set-option -g default-command ""
-#set-option -g default-shell /usr/local/bin/zsh
+set-option -g default-shell /usr/local/bin/zsh
 #set-option -g default-command /usr/local/bin/zsh
 
 unbind r
