--- a/tmux.conf
+++ b/tmux.conf
@@ -1,17 +1,14 @@
 set -s escape-time 1
 set -g default-terminal "screen-256color" 
-setw -g utf8 on
-set -g status-utf8 on
 # change prefix key
 unbind C-b
 set-option -g prefix C-q
 
 set -g status-interval 10
 set -g status-bg white
-setw -g window-status-current-fg white
-setw -g window-status-current-bg black
+setw -g window-status-current-style "fg=white, bg=white"
 #pane-active-border
-set -g pane-active-border-fg white
+set -g pane-active-border-style "fg=white"
 # KeyBindings
 # pane
 unbind 1
